--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
   "name": "cachebust",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "A simple cache buster",
-  "main": "index.js",
   "bin": {
     "cachebust": "index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/sparkbox/cachebust.git"
+  },
+  "engines" : {
+    "node" : "~8.5.0"
+  },
   "author": "Patrick Simpson",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "fingerprinting": "^1.0.1",
-    "fs-extra": "^5.0.0",
-    "path": "^0.12.7",
     "replace-in-file": "^3.1.1"
   }
 }
